--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
@@ -28,14 +28,19 @@
     <div *ngIf="dfaApplicationMainDataService.isSubmitted == true || dfaApplicationMainDataService.getViewOrEdit() === 'view'">
       Your application has been submitted.<br/><br/>
 
-      You may view the status of your application on your dashboard and a copy has been emailed to you at the email address provided.
-      While you must submit an application for each DFA property claim, do not submit more than one application for the same property.<br/><br/>
+      You may view the status of your application on your dashboard. While you must submit an application for each DFA property claim, do not submit more than one application for the same property.<br/><br/>
 
       <b>Clean Up Log</b><br/>
       You may continue to update the Clean Up Log. <br/><br/>
 
       <b>Damaged Items</b><br/>
       If further items are identified after submitting your application, please add them to the Damaged Items by Room list. <br/><br/>
+
+      <b>Supporting Documents</b><br/>
+      You may continue to add supporting documents, but are unable to delete any documents you have uploaded to your application.**<br/><br/>
+
+      <b>Other Contacts</b><br/>
+      You may add or edit Other Contacts.<br/><br/>
     </div>
 
   </mat-card-content>
