get relationship from title if not stored in dfa_relation..

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -30,7 +30,7 @@
                 <!-- Relationship Column -->
                 <ng-container matColumnDef="relationship" style="width:40%">
                   <th mat-header-cell *matHeaderCellDef>
-                    <b>Relationship</b>
+                    <b>Relationship to Applicant</b>
                   </th>
                   <td *matCellDef="let element" mat-cell>
                     {{ element.relationship}}
