--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/bcsc-email-error-dialog/bcsc-email-error-dialog.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/bcsc-email-error-dialog/bcsc-email-error-dialog.component.html
@@ -1,4 +1,4 @@
-<h2><b><span style="color:red;">BCSC Missing Email Address</span></b></h2>
+<h2><b><span style="color:red;">BC Services Card Missing Email Address</span></b></h2>
 
 <mat-dialog-content>
   <div class="row">
