--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -285,6 +285,13 @@
           (cencelFileUpload)="cancelNewCleanupLogFile()"
           [fileUpload]="formCreationService.fileUploadsForm.value.get('cleanupFileUpload')"
         ></app-dfa-attachment>
+        <app-loader
+        class="spinner"
+        [showLoader]="isLoading"
+        strokeWidth="10"
+        diameter="50"
+      >
+      </app-loader>
       </div>
     </div>
   </ng-container>
